--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-{{ parent() }}
-nouvel utilisateur
+    {{ parent() }}
+    {{ title }}
 {% endblock %}
 
 {% block body %}
