--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,10 +1,18 @@
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <div class="container-fluid mx-4">
+        <a class="navbar-brand" href="{{ path('home') }}">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarColor01">
+        <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+            <a class="btn btn-primary ms-2" href="{{ path('contact')}}">Contact</a>
+            </li>
+            <li class="nav-item">
+            <a class="btn btn-primary ms-2" href="{{ path('cgu')}}">CGU</a>
+            </li>
+        </ul>
         <ul class="navbar-nav ms-auto">
             <li class="nav-item">
             <a class="btn btn-secondary ms-2" href="#">Connexion</a>
