--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,29 +1,38 @@
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-    <div class="container-fluid mx-4">
-        <a class="navbar-brand" href="{{ path('home') }}">Navbar</a>
+ <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{{path('home')}}">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-            <a class="btn btn-primary ms-2" href="{{ path('contact')}}">Contact</a>
-            </li>
-            <li class="nav-item">
-            <a class="btn btn-primary ms-2" href="{{ path('cgu')}}">CGU</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-            <a class="btn btn-secondary ms-2" href="#">Connexion</a>
-            </li>
-            <li class="nav-item">
-            <a class="btn btn-secondary ms-2" href="#">Deconnexion</a>
-            </li>
-            <li class="nav-item">
-            <a class="btn btn-secondary ms-2" href="#">Inscription</a>
-            </li>
-        </ul>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Données</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="{{path('marque_index')}}">Marques</a>
+                        <a class="dropdown-item" href="{{path('modele_index')}}">Modèles</a>
+                        <a class="dropdown-item" href="{{path('moto_index')}}">Motos</a>
+                        <a class="dropdown-item" href="{{path('sortie_index')}}">Sorties</a>
+                        <a class="dropdown-item" href="{{path('adhesion_index')}}">Adhésions</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{path('contact')}}">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{path('cgu')}}">CGU</a>
+                </li>
+                <li class="nav-item">
+                <a class="btn btn-secondary ms-2" href="#">Connexion</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-secondary ms-2" href="#">Déconnexion</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-secondary ms-2" href="#">Inscription</a>
+                </li>
+            </ul>    
         </div>
     </div>
 </nav>
+
