--- a/templates/marque/update.html.twig
+++ b/templates/marque/update.html.twig
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1 class="text-center my-4">Création d'une marque</h1>
+    <h1 class="text-center my-4">Modification d'une marque</h1>
+
     {% include "partials/_form_marque.html.twig" %}
 {% endblock %}
