--- a/templates/modele/create.html.twig
+++ b/templates/modele/create.html.twig
@@ -6,6 +6,6 @@
 {% endblock %}
 
 {% block body %}
-    <h1 class="text-center my-4">Création d'une marque</h1>
+    <h1 class="text-center my-4">Création d'un modèle</h1>
     {% include "partials/_form_marque.html.twig" %}
 {% endblock %}
